syntax = "proto3";

option csharp_namespace = "Server";

package greet;

service MazeSolver {
	rpc SolveMaze (SolveRequest) returns (Path);
}

message SolveRequest {
	string maze = 1;
}

message Path {
	string path = 1;
}